<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:title=""
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/main_menu_public_chat_button"
        android:icon="@drawable/ic_baseline_public_24"
        android:title="@string/public_chat"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/main_menu_settings_button"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings_button"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item android:id="@+id/main_menu_experimental"
        android:icon="@drawable/ic_baseline_cleaning_services_24"
        android:title="@string/experimental"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_clear"
        android:visible="false"
        android:title="@string/clear_friends" />
    <item
        android:id="@+id/main_menu_refresh"
        android:visible="false"
        android:title="@string/refresh_connection" />
    <item android:id="@+id/main_menu_edit_profile_button"
        android:title="@string/edit_profile" />

</menu>